Fix spacing issue on section-two content mobile layout

--- a/css/index.css
+++ b/css/index.css
@@ -311,9 +311,11 @@ header .header-title a:hover {
 .section-two {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  margin: 6vw 4vw;
-  height: 85.5vw;
+  margin: 0 4vw;
+}
+
+.section-two div {
+  margin-top: 9vw;
 }
 
 .section-two div p {
@@ -397,6 +399,7 @@ footer {
 
   .section-two div {
     margin-right: 4.5vw;
+    margin-top: 0;
   }
 
   .section-two div:last-child {
@@ -436,6 +439,7 @@ footer {
     display: inline-block;
     margin-top: 6vw;
     margin-right: 7vw;
+    max-width: 100%;
   }
 
   .header-divider-line {
